--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^41.1.0",
     "@ckeditor/ckeditor5-vue": "^5.1.0",
+    "axios": "^1.6.7",
     "vue": "^3.4.15",
+    "vue-base64-file-upload": "^1.0.4",
     "vue-router": "^4.2.5",
     "vuex": "^4.0.2"
   },
